--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^6.11.2",
     "@clerk/themes": "^2.2.17",
     "@hookform/resolvers": "^4.0.0",
+    "@prisma/client": "^6.3.1",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-aspect-ratio": "^1.1.2",
@@ -48,6 +49,7 @@
     "lucide-react": "^0.475.0",
     "next": "15.1.6",
     "next-themes": "^0.4.4",
+    "prisma": "^6.3.1",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
